--- a/style.css
+++ b/style.css
@@ -155,12 +155,19 @@ section {
 
 .section__pic-container {
   display: flex;
-  height: 100px;
-  width: 100px;
+  height: 400px;
+  width: 400px;
   margin: auto 0;
-  object-fit: cover;
-  border-radius: 50%;
+  border-radius: 50%; /* circular container */
+  overflow: hidden;   /* ensures image is clipped to circle */
 }
+
+.section__pic-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* makes sure the image fills the container without stretching */
+}
+
 
 .section__text {
   align-self: center;
